--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,21 +2,26 @@
   --color-primary: #f7eeee;
   --color-sec: #f7cac9;
   --color-third: #91a8d0;
+
   --text-color: #14452f;
-  --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%); }
+  --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%);
+}
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   font-family: 'Bellota Text', sans-serif;
@@ -26,4 +31,5 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   min-height: 100vh;
-  color: var(--text-color); }
+  color: var(--text-color);
+}
