add base layout

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,14 @@
   --color-primary: #f7eeee;
   --color-sec: #f7cac9;
   --color-third: #91a8d0;
+  --color-fourth: #607291;
   --text-color: #14452f;
-  --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%); }
+  --bg-color: #adbdd8;
+  --bg-color-2: #09271a;
+  --white: #fff;
+  --black: #000;
+  --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%);
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3); }
 
 * {
   margin: 0;
@@ -27,3 +33,26 @@ body {
   background-repeat: no-repeat;
   min-height: 100vh;
   color: var(--text-color); }
+
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--bg-color);
+  box-shadow: var(--shadow-dark);
+  min-height: 50rem; }
+
+.header {
+  height: 7rem;
+  background-color: var(--white);
+  border-bottom: 2px solid var(--color-fourth); }
+
+.content {
+  display: flex; }
+
+.sidebar {
+  background-color: var(--bg-color-2);
+  flex: 0 0 18%;
+  color: var(--white); }
+
+.hotel-view {
+  flex: 1; }
