--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -7,6 +7,10 @@
   --text-color: #14452f;
   --bg-color: #adbdd8;
   --bg-color-2: #09271a;
+  --bg-color-3: #e6e6e6;
+  --bg-color-4: #c6c6c6;
+  --bg-color-5: #535353;
+
   --white: #fff;
   --black: #000;
 
