--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -1,3 +1,70 @@
+:root {
+  --color-primary: #f7eeee;
+  --color-sec: #f7cac9;
+  --color-third: #91a8d0;
+  --color-fourth: #607291;
+  --text-color: #14452f;
+  --bg-color: #adbdd8;
+  --bg-color-2: #09271a;
+  --white: #fff;
+  --black: #000;
+  --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%);
+  --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3); }
+
 * {
   margin: 0;
   padding: 0; }
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+
+body {
+  font-family: 'Bellota Text', sans-serif;
+  font-weight: 400;
+  line-height: 1.6;
+  background-image: var(--gradient-primary);
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  color: var(--text-color); }
+
+.container {
+  max-width: 120rem;
+  margin: 8rem auto;
+  background-color: var(--bg-color);
+  box-shadow: var(--shadow-dark);
+  min-height: 50rem; }
+
+.content {
+  display: flex; }
+
+.sidebar {
+  background-color: var(--bg-color-2);
+  flex: 0 0 18%;
+  color: var(--white); }
+
+.hotel-view {
+  flex: 1; }
+
+.header {
+  display: flex;
+  height: 7rem;
+  background-color: var(--white);
+  border-bottom: 2px solid var(--color-fourth); }
+  .header__logo {
+    height: 3.25rem; }
+  .header__search-icon {
+    height: 2rem;
+    width: 2rem; }
+  .header__nav-icon {
+    height: 2.25rem;
+    width: 2.25rem; }
+  .header__nav-user-photo {
+    width: 3.5rem;
+    border-radius: 50%; }
