--- a/css/style.css
+++ b/css/style.css
@@ -61,10 +61,10 @@ body {
   background-color: var(--white);
   border-bottom: 2px solid var(--color-fourth);
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  padding: 0 2.5rem; }
   .header__logo {
-    height: 3.25rem;
-    margin-left: 5rem; }
+    height: 3.25rem; }
   .header__search {
     flex: 0 0 40%;
     display: flex;
@@ -103,9 +103,39 @@ body {
     height: 2rem;
     width: 2rem;
     fill: var(--bg-color-5); }
+  .header__nav {
+    display: flex;
+    align-items: center;
+    align-self: stretch; }
+    .header__nav > * {
+      padding: 0 2rem;
+      cursor: pointer;
+      height: 100%;
+      display: flex;
+      align-items: center; }
+      .header__nav > *:hover {
+        background-color: var(--bg-color-3); }
+  .header__nav-icon-box {
+    position: relative; }
   .header__nav-icon {
-    height: 2.25rem;
-    width: 2.25rem; }
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: var(--bg-color-5); }
+  .header__notification {
+    font-size: .9rem;
+    font-weight: 600;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    background-color: var(--color-sec);
+    color: var(--bg-color-5);
+    position: absolute;
+    top: 2rem;
+    right: .9rem;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
   .header__nav-user-photo {
     width: 3.5rem;
-    border-radius: 50%; }
+    border-radius: 50%;
+    margin-right: 1rem; }
