--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -5,10 +5,10 @@
   border-bottom: 2px solid var(--color-fourth);
   justify-content: space-between;
   align-items: center;
+  padding: 0 2.5rem;
 
   &__logo {
     height: 3.25rem;
-    margin-left: 5rem;
   }
 
   &__search {
@@ -66,23 +66,54 @@
     fill: var(--bg-color-5);
   }
 
-  &__nav {}
+  &__nav {
+    display: flex;
+    align-items: center;
+    align-self: stretch;
 
-  &__nav-icon-box {}
-
-  &__nav-icon {
-    height: 2.25rem;
-    width: 2.25rem;
+    & > * {
+      padding: 0 2rem;
+      cursor: pointer;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      &:hover {
+        background-color: var(--bg-color-3);
+      }
+    }
   }
 
-  &__notification {}
+  &__nav-icon-box {
+    position: relative;
+  }
 
-  &__nav-user {}
+  &__nav-icon {
+    height: 2.5rem;
+    width: 2.5rem;
+    fill: var(--bg-color-5);
+  }
+
+  &__notification {
+    font-size: .9rem;
+    font-weight: 600;
+    height: 1.5rem;
+    width: 1.5rem;
+    border-radius: 50%;
+    background-color: var(--color-sec);
+    color: var(--bg-color-5);
+    position: absolute;
+    top: 2rem;
+    right: .9rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 
   &__nav-user-photo {
     width: 3.5rem;
     border-radius: 50%;
+    margin-right: 1rem;
   }
 
-  &__nav-username {}
 }
