--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,55 @@ body {
   min-height: 100vh;
   color: var(--text-color); }
 
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; }
+  .sidebar__ul {
+    font-size: 1.4rem;
+    margin-top: 3.5rem;
+    list-style: none; }
+  .sidebar__item {
+    position: relative; }
+    .sidebar__item:not(:last-child) {
+      margin-bottom: .5rem; }
+    .sidebar__item::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 3px;
+      background-color: var(--color-fourth);
+      transform: scaleY(0);
+      transition: transform 0.3s, width cubic-bezier(1, 0, 0, 1) 0.4s 0.2s, background-color 0.1s; }
+    .sidebar__item:hover::before, .sidebar__item--active::before {
+      transform: scaleY(1);
+      width: 100%; }
+    .sidebar__item:active::before {
+      background-color: var(--color-third); }
+  .sidebar__link:link, .sidebar__link:visited {
+    color: var(--white);
+    text-decoration: none;
+    text-transform: uppercase;
+    display: block;
+    padding: 1.5rem 3rem;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+    position: relative; }
+  .sidebar__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    margin-right: 2rem;
+    fill: currentColor; }
+
+.legal {
+  font-size: 1.2rem;
+  text-align: center;
+  padding: 2.5rem;
+  color: var(--color-grey-light-4); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
