--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -69,3 +69,12 @@
   padding: 2.5rem;
   color: var(--color-grey-light-4);
 }
+
+.gallery {
+  display: flex;
+
+  &__photo {
+    width: 100%;
+    display: block;
+  }
+}
