--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,15 @@ body {
     width: 100%;
     display: block; }
 
+.overview {
+  display: flex; }
+  .overview__stars {
+    margin-right: auto; }
+  .overview__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
