--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -78,3 +78,32 @@
     display: block;
   }
 }
+
+.overview {
+  display: flex;
+  &__heading {
+
+  }
+
+  &__stars {
+    margin-right: auto;
+  }
+
+  &__icon {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary);
+  }
+
+  &__rating {
+
+  }
+
+  &__rating-average {
+    
+  }
+
+  &__rating-count {
+    
+  }
+}
