--- a/css/style.css
+++ b/css/style.css
@@ -93,13 +93,59 @@ body {
     display: block; }
 
 .overview {
-  display: flex; }
+  display: flex;
+  border-bottom: 1px solid var(--color-fourth);
+  align-items: center; }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: .1rem;
+    padding: 1.5rem 3rem; }
   .overview__stars {
-    margin-right: auto; }
+    margin-right: auto;
+    display: flex; }
+  .overview__stars:hover .overview__icon {
+    animation: pulsate 1s infinite;
+    border-radius: 100px; }
   .overview__icon {
     width: 1.75rem;
     height: 1.75rem;
-    fill: var(--color-primary); }
+    fill: var(--text-color); }
+  .overview__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center; }
+  .overview__btn {
+    margin-left: .5rem; }
+  .overview__rating {
+    background-color: var(--color-third);
+    color: var(--white);
+    margin-left: 3rem;
+    padding: 0.5rem;
+    align-self: stretch;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; }
+  .overview__rating-average {
+    font-size: 2.25rem;
+    font-weight: 300;
+    margin-bottom: -5px; }
+  .overview__rating-count {
+    font-size: .9rem;
+    text-transform: uppercase; }
+
+@keyframes pulsate {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.25);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
 
 .container {
   max-width: 120rem;
@@ -203,3 +249,16 @@ body {
     width: 3.5rem;
     border-radius: 50%;
     margin-right: 1rem; }
+
+.btn--inline {
+  border: none;
+  color: var(--text-color);
+  font-size: inherit;
+  border-bottom: 1px solid currentColor;
+  padding-bottom: 2px;
+  display: inline-block;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s; }
+  .btn--inline:focus {
+    outline: none; }
