detail section markup and styles

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -16,6 +16,7 @@
 
   --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%);
 
+  --shadow-light: 0 2rem 4rem rgba(0, 0, 0, .1);
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
