--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
   --white: #fff;
   --black: #000;
   --gradient-primary: linear-gradient(179.1deg, var(--color-primary) -1.9%, var(--color-sec) 44.9%, var(--color-third) 96.1%);
+  --shadow-light: 0 2rem 4rem rgba(0, 0, 0, .1);
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3); }
 
 * {
@@ -142,7 +143,7 @@ body {
     box-shadow: none; }
   50% {
     transform: scale(1.25);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+    box-shadow: var(--shadow-light); }
   100% {
     transform: scale(1);
     box-shadow: none; } }
@@ -164,6 +165,23 @@ body {
 
 .hotel-view {
   flex: 1; }
+
+.detail {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-third);
+  border-bottom: 1px solid var(--color-fourth); }
+  .detail__description {
+    background-color: var(--white);
+    box-shadow: var(--shadow-light);
+    flex: 0 0 60%;
+    margin-right: 4.5rem;
+    padding: 2.5em;
+    font-size: 1.4rem; }
+  .detail__reviews {
+    flex: 1;
+    background-color: greenyellow;
+    padding: 2.5em; }
 
 .header {
   display: flex;
