--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -152,7 +152,7 @@
 
   50% {
     transform: scale(1.25);
-    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25);
+    box-shadow: var(--shadow-light);
   }
 
   100% {
