--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -40,6 +40,66 @@
     flex: 1;
     background-color: greenyellow;
     padding: 2.5em;
+  }
 
+  &__paragraph {
+    &:not(:last-of-type) {
+      margin-bottom: 2rem;
+    }
+
+    &--rec {
+      margin-right: auto;
+    }
+  }
+
+  &__list {
+    list-style-type: none;
+    margin: 3rem 0;
+    padding: 3rem;
+    border-top: 1px solid var(--color-fourth);
+    border-bottom: 1px solid var(--color-fourth);
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: .7rem;
+
+    &::before {
+      content: '';
+      display: inline-block;
+      height: 1.3rem;
+      width: 1.3rem;
+      margin-right: .7rem;
+
+      // //older browsers
+      // background-image: url(../img/chevron-right.svg);
+      // background-size: cover;
+
+      //modern browsers
+      background-color: var(--color-fourth);
+      mask-image: url(../img/chevron-right.svg);
+      mask-size: cover;
+    }
+  }
+
+  &__recommend {
+    font-size: 1.3rem;
+    color: var(--color-fourth);
+    display: flex;
+    align-items: center;
+  }
+
+  &__small-photo {
+    box-sizing: content-box;
+    width: 4.5rem;
+    height: 4.5rem;
+    border-radius: 50%;
+    border: 3px solid var(--white);
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+
+    }
   }
 }
