--- a/css/style.css
+++ b/css/style.css
@@ -170,7 +170,8 @@ body {
   display: flex;
   padding: 4.5rem;
   background-color: var(--color-third);
-  border-bottom: 1px solid var(--color-fourth); }
+  border-bottom: 1px solid var(--color-fourth);
+  font-size: 1.4rem; }
   .detail__description {
     background-color: var(--white);
     box-shadow: var(--shadow-light);
@@ -180,8 +181,9 @@ body {
     font-size: 1.4rem; }
   .detail__reviews {
     flex: 1;
-    background-color: greenyellow;
-    padding: 2.5em; }
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
   .detail__paragraph:not(:last-of-type) {
     margin-bottom: 2rem; }
   .detail__paragraph--rec {
@@ -219,6 +221,44 @@ body {
     border: 3px solid var(--white); }
     .detail__small-photo:not(:last-child) {
       margin-right: -1.5rem; }
+  .detail__review {
+    background-color: var(--white);
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative; }
+    .detail__review::before {
+      content: "\201C";
+      position: absolute;
+      top: -2.3rem;
+      left: -.7rem;
+      font-size: 20rem;
+      color: var(--color-primary);
+      line-height: 1;
+      font-family: sans-serif;
+      z-index: 1; }
+  .detail__text {
+    margin-bottom: 2rem;
+    z-index: 2;
+    position: relative; }
+  .detail__review-user {
+    display: flex;
+    align-items: center; }
+  .detail__review-box {
+    margin-right: auto; }
+  .detail__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem; }
+  .detail__review-user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem; }
+  .detail__review-date {
+    font-size: 1rem;
+    color: var(--color-third); }
 
 .header {
   display: flex;
@@ -315,5 +355,13 @@ body {
   background-color: transparent;
   cursor: pointer;
   transition: all .2s; }
+  .btn--inline > span {
+    margin-left: .2rem;
+    transition: margin-left .2s; }
+  .btn--inline:hover {
+    color: var(--bg-color-5);
+    transform: scale(1.03); }
+    .btn--inline:hover > span {
+      margin-left: .8rem; }
   .btn--inline:focus {
     outline: none; }
