--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -26,6 +26,7 @@
   padding: 4.5rem;
   background-color: var(--color-third);
   border-bottom: 1px solid var(--color-fourth);
+  font-size: 1.4rem;
 
   &__description {
     background-color: var(--white);
@@ -38,8 +39,9 @@
 
   &__reviews {
     flex: 1;
-    background-color: greenyellow;
-    padding: 2.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 
   &__paragraph {
@@ -102,4 +104,61 @@
 
     }
   }
+
+  &__review {
+    background-color: var(--white);
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-bottom: 3.5rem;
+    position: relative;
+
+    &::before {
+      content: "\201C";
+      position: absolute;
+      top: -2.3rem;
+      left: -.7rem;
+      font-size: 20rem;
+      color: var(--color-primary);
+      line-height: 1;
+      font-family: sans-serif;
+      z-index: 1;
+    }
+  }
+
+  &__text {
+    margin-bottom: 2rem;
+    z-index: 2;
+    position: relative;
+  }
+
+  &__review-user {
+    display: flex;
+    align-items: center;
+  }
+
+  &__review-box {
+    margin-right: auto;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__review-user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: .4rem;
+  }
+
+  &__review-date {
+    font-size: 1rem;
+    color: var(--color-third);
+  }
+
+ 
+
 }
