--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -159,6 +159,16 @@
     color: var(--color-third);
   }
 
- 
+  &__cta {
+    padding: 3.5rem;
+    text-align: center;
+  }
+
+  &__book-now {
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin-bottom: 3.5rem;
+    text-transform: uppercase;
+  }
 
 }
