--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -167,8 +167,56 @@
   &__book-now {
     font-size: 1.5rem;
     font-weight: 300;
-    margin-bottom: 3.5rem;
     text-transform: uppercase;
+    margin-bottom: 3.5rem;
   }
 
+  &__cta-btn {
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    border: 1px solid var(--color-third);
+    background-image: linear-gradient(to right, var(--color-third), var(--color-sec));
+    color: var(--text-color);
+    position: relative;
+    overflow: hidden;
+    transition: all .3s;
+    cursor: pointer;
+
+    & > * {
+      display: inline-block;
+      transition: all .3s;
+      height: 100%;
+      width: 100%;
+    }
+    
+    &--visible {
+      padding: 2rem 7.5rem;
+    }
+
+    &--hidden {
+      position: absolute;
+      left: 0;
+      top: -100%;
+      padding: 2rem 0;
+    }
+
+    &:hover {
+      background-image: linear-gradient(to left, var(--color-third), var(--color-sec));
+
+    }
+
+    &:hover &--visible {
+      transform: translateY(100%);
+    }
+
+    &:hover &--hidden {
+      top: 0;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
 }
