--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -20,6 +20,10 @@
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, .3);
 }
 
+$desktop-small: 75em;
+$desktop-smaller: 68.75em;
+$tablet: 56.25em;
+
 * {
   margin: 0;
   padding: 0;
@@ -45,4 +49,10 @@ body {
   background-repeat: no-repeat;
   min-height: 100vh;
   color: var(--text-color);
+}
+
+@media only screen and (max-width: $desktop-smaller) {
+  html {
+    font-size: 50%;
+  }
 }
