adjustments for mobile

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -23,6 +23,8 @@
 $desktop-small: 75em;
 $desktop-smaller: 68.75em;
 $tablet: 56.25em;
+$phone: 37.5em;
+$phone-small: 31.25em;
 
 * {
   margin: 0;
