--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -43,7 +43,7 @@
     }
   }
 
-  &__search-input:focus + &__search-btn {
+  &__search-input:focus+&__search-btn {
     background-color: var(--bg-color-4);
   }
 
@@ -51,6 +51,7 @@
     border: none;
     background-color: var(--bg-color-3);
     transition: all .2s;
+
     &:focus {
       outline: none;
     }
@@ -71,12 +72,13 @@
     align-items: center;
     align-self: stretch;
 
-    & > * {
+    &>* {
       padding: 0 2rem;
       cursor: pointer;
       height: 100%;
       display: flex;
       align-items: center;
+
       &:hover {
         background-color: var(--bg-color-3);
       }
@@ -116,4 +118,20 @@
     margin-right: 1rem;
   }
 
+}
+
+@media only screen and(max-width: $phone-small) {
+  .header {
+    flex-wrap: wrap;
+    height: 12rem;
+    align-content: space-around;
+    &__search {
+      order: 1;
+      flex: 0 0 100%;
+    }
+
+    &__search-input {
+      width: 100%;
+    }
+  }
 }
