--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -262,3 +262,18 @@
     }
   }
 }
+
+@media only screen and (max-width: $phone) {
+  .detail {
+    flex-direction: column;
+
+    &__review {
+      width: 100%;
+    }
+
+    &__description {
+      margin-right: 0;
+      margin-bottom: 2rem;
+    }
+  }
+}
